--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "repository": "https://github.com/angular/material-start",
   "license": "MIT",
   "devDependencies": {
-    "karma": "~0.10",
-    "protractor": "^1.1.1",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.7.0",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-watch": "^0.6.1",
     "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "karma": "~0.10",
+    "karma-junit-reporter": "^0.2.2",
+    "protractor": "^1.1.1",
+    "shelljs": "^0.2.6"
   },
   "scripts": {
-    "postinstall": "bower update",
-    "prestart": "npm update"
+    "postinstall": "grunt"
   },
   "dependencies": {
     "angular-animate": "^1.3.15",
