--- a/package.json
+++ b/package.json
@@ -6,15 +6,12 @@
   "repository": "",
   "license": "MIT",
   "devDependencies": {
+    "angular-ui-router": "^0.2.14",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.7.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "http-server": "^0.6.1",
-    "karma": "~0.10",
-    "karma-junit-reporter": "^0.2.2",
-    "protractor": "^1.1.1",
-    "shelljs": "^0.2.6"
+    "http-server": "^0.6.1"
   },
   "scripts": {
     "start": "start cmd /k run.bat && grunt watch",
