--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "scripts": {
     "start": "start cmd /k run.bat && grunt watch",
-    "postinstall": "grunt"
+    "postinstall": "grunt",
+    "test": "karma start"
   },
   "dependencies": {
     "angular-animate": "^1.3.15",
