--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "angular-animate": "^1.3.15",
     "angular-aria": "^1.3.15",
-    "angular-material": "^0.8.3",
-    "angular-route": "^1.3.15"
+    "angular-material": "^0.8.3"
   }
 }
