--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "postinstall": "grunt"
   },
   "dependencies": {
-    "angular-animate": "^1.3.15",
-    "angular-aria": "^1.3.15",
-    "angular-cookies": "^1.3.15",
-    "angular-material": "^0.8.3"
+    "angular-animate": "1.3.15",
+    "angular-aria": "1.3.15",
+    "angular-cookies": "1.3.15",
+    "angular-material": "0.8.3"
   }
 }
