--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "karma-browserify": "^4.1.2",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.12",
-    "karma-coverage": "^0.2.6",
+    "karma-coverage": "0.2.6",
     "karma-mocha": "^0.1.10",
     "karma-sinon": "^1.0.4",
     "mocha": "^2.2.5",
