--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "karma-sinon": "^1.0.4",
     "mocha": "^2.2.5",
     "sinon": "^1.14.1"
+  },
+  "devDependencies": {
+    "karma-ng-html2js-preprocessor": "^0.1.2"
   }
 }
