--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-browserify": "^3.7.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-sass": "0.9.2",
     "http-server": "^0.6.1"
   },
   "scripts": {
@@ -22,6 +23,7 @@
     "angular-animate": "1.3.15",
     "angular-aria": "1.3.15",
     "angular-cookies": "1.3.15",
-    "angular-material": "0.8.3"
+    "angular-material": "0.8.3",
+    "grunt-contrib-sass": "^0.9.2"
   }
 }
